--- a/src/components/landingpage.css
+++ b/src/components/landingpage.css
@@ -7,6 +7,37 @@
   text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
   background-color: floralwhite;
 }
+
+.headorContaint{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.h_logo{
+    width: 5rem;
+    border-radius: 50%;
+    filter: saturate(100);
+    cursor: pointer;
+}
+
+.h_button{
+    width: 100%;
+    background-color: #28a745;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1.2em;
+    transition: background-color 0.2s ease;
+}
+
+  .headorContaint span{
+    margin-right: 5px;
+  }
+
+
 .heading{
     align-items: center;
     text-align: center;
